@@ -1,5 +1,5 @@
 #
-# $Id: makefile.os2,v 1.31 2002/03/21 15:12:56 mikulik Exp $
+# $Id: makefile.os2,v 1.32 2002/03/21 21:46:13 amai Exp $
 #
 # GNUPLOT Makefile for use on OS/2 2.x (and above)
 # using emx 0.9 (and above) and GNUMake
@@ -280,7 +280,7 @@ gplt_x11.o: gplt_x11.c mouse.h gpexecute.h config.h
 # This file is preferable over having explicit gcc command longer than 10 lines:
 # gcc ... -DHAVE_ -DHAVE_ ... -DHAVE_ -DHAVE_ ... myfile.c
 #
-config.h: ../config/config.os2
+config.h: ..\config\config.os2
 	IF EXIST $@ DEL $@
 	copy $< $@
 
